ci(release): hardcode version for initial release

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -9,7 +9,7 @@ body:
       value: |
         Thanks for logging an issue, I appreciate the feedback! Please confirm the following before continuing:
         - You are using the latest version, since the issue may already be fixed.
-        - There are no [existing issues](https://github.com/benelan/gh-fzf/issues) with the same report/request. 
+        - There are no [existing issues](https://github.com/benelan/gh-fzf/issues) with the same report/request.
             - If there is a duplicate issue, please add a 👍 reaction instead of creating a new one.
   - type: textarea
     id: actual
@@ -32,7 +32,7 @@ body:
       description: Clear, numbered steps for reproducing the issue.
       placeholder: |
         1. Run the script with the following arguments: ...
-        2. Check the console for an error ...
+        2. Check the logs for an error ...
         3. ...
     validations:
       required: true
@@ -40,8 +40,8 @@ body:
     id: version
     attributes:
       label: Reproduction Version
-      description: The latest version that reproduces the issue.
-      placeholder: v2.3.0
+      description: The latest version that reproduces the issue (check `gh fzf version`)
+      placeholder: 0.0.0 # x-release-please-version
     validations:
       required: true
   - type: input
@@ -49,17 +49,13 @@ body:
     attributes:
       label: Regression?
       description: Please provide the last working version if the issue is a regression.
-      placeholder: v2.0.0
+      placeholder: 0.1.0
     validations:
       required: false
   - type: textarea
     id: relevant
     attributes:
       label: Relevant Info
-      description: Environment, stack traces, related issues, suggestions/resources on how to fix, etc.
-      placeholder: |
-        Windows 10
-        Uncaught TypeError: Cannot read property of undefined
-        ...
+      description: Environment, logs, related issues, suggestions/resources on how to fix, etc.
     validations:
       required: false
