--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,18 @@ jobs:
           package-name: gh-fzf
           token: ${{ secrets.GITHUB_TOKEN }}
           default-branch: main
-          extra-files: gh-fzf
+          extra-files: |
+            gh-fzf
+            .github/ISSUE_TEMPLATE/bug.yml
+          release-as: 0.1.0
           plugins: sentence-case
           prerelease: true
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: main
+          fetch-depth: 0
+          fetch-tags: true
       - name: tag stable versions
         if: ${{ steps.release.outputs.release_created }}
         run: |
