--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,5 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
-          git tag -d stable || true
-          git push origin :stable || true
-          git tag -a stable -m "Current Stable Release"
-          git push origin stable
+          git tag -fa stable -m "Current Stable Release"
+          git push -f origin stable
