--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,9 +1,15 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "release-type": "simple",
   "packages": {
     ".": {
+      "release-type": "simple",
+      "package-name": "gh-fzf",
       "extra-files": ["gh-fzf", ".github/ISSUE_TEMPLATE/bug.yml"]
     }
-  }
+  },
+  "plugins": [
+    {
+      "type": "sentence-case"
+    }
+  ]
 }
