--- a/.textlintrc
+++ b/.textlintrc
@@ -2,21 +2,12 @@
   "filters": {
     "comments": true,
     "node-types": {
-      "nodeTypes": [
-        "BlockQuote"
-      ]
+      "nodeTypes": ["BlockQuote"]
     }
   },
   "rules": {
-    "no-curly-quotes": true,
     "terminology": {
-      "severity": "warning",
-      "exclude": [
-        "JavaScript",
-        "TypeSript",
-        "repo\\b",
-        "bug[- ]fix(es)?"
-      ]
+      "exclude": ["JavaScript", "TypeSript", "repo\\b", "bug[- ]fix(es)?"]
     }
   }
 }
