docs: update issue templates and community guidelines

--- a/.github/ISSUE_TEMPLATE/2-enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/2-enhancement.yml
@@ -1,5 +1,6 @@
-name: Enhancement Request
-description: Request for a new feature
+# yaml-language-server: $schema=https://json.schemastore.org/github-issue-forms.json
+name: Enhancement
+description: Request a new feature.
 labels: ["enhancement"]
 assignees:
   - benelan
@@ -8,21 +9,14 @@ body:
     attributes:
       value: |
         Thanks for logging an issue, I appreciate the feedback! Please confirm the following before continuing:
-        - You are using the latest version, since the issue may already be fixed.
-        - There are no [existing issues](https://github.com/benelan/gh-fzf/issues) with the same report/request.
+        - You are using the latest version, since the feature may already be available.
+        - There are no [existing issues](/../../issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement) with the same feature request.
             - If there is a duplicate issue, please add a 👍 reaction instead of creating a new one.
   - type: textarea
     id: description
     attributes:
       label: Description
-      description: What is the requested functionality?
-    validations:
-      required: true
-  - type: textarea
-    id: criteria
-    attributes:
-      label: Acceptance Criteria
-      description: Requirements, desired new behavior, etc.
+      description: What is the requested functionality? Specify requirements, desired new behavior, etc.
     validations:
       required: true
   - type: textarea
