--- a/.github/ISSUE_TEMPLATE/4-question.yml
+++ b/.github/ISSUE_TEMPLATE/4-question.yml
@@ -1,5 +1,6 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-issue-forms.json
 name: Question
-description: Request for information - not a code change
+description: Ask for help - not a code change.
 labels: ["question"]
 assignees:
   - benelan
@@ -9,7 +10,7 @@ body:
       value: |
         Thanks for logging an issue, I appreciate the feedback! Please confirm the following before continuing:
         - You are using the latest version, since the issue may already be fixed.
-        - There are no [existing issues](https://github.com/benelan/gh-fzf/issues) with the same report/request.
+        - There are no [existing issues](/../../issues?q=is%3Aopen+is%3Aissue+label%3Aquestion) with the same question.
             - If there is a duplicate issue, please add a 👍 reaction instead of creating a new one.
   - type: textarea
     id: question
